tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_c_function_declarations.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [
        [
          32,
          56
        ],
        [
          175,
          198
        ]
      ],
      "content": "\n#ifndef TEST_H\n#define TEST_H\n\n// Function declarations\nint calculate_sum(int a, int b);\nvoid print_message(const char *msg);\nfloat compute_average(int *values, int count);\n\n// Function definitions\nstatic inline int max(int a, int b) {\n    return (a > b) ? a : b;\n}\n\n#endif\n",
      "end_line": 15,
      "language": "c",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "#define TEST_H",
      "end_line": 4,
      "language": "c",
      "name": "TEST_H",
      "original_indentation": 0,
      "start_line": 3
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "static inline int max(int a, int b) {\n    return (a > b) ? a : b;\n}",
      "end_line": 13,
      "language": "c",
      "name": "max",
      "original_indentation": 0,
      "start_line": 11
    }
  ],
  "source_code": "\n#ifndef TEST_H\n#define TEST_H\n\n// Function declarations\nint calculate_sum(int a, int b);\nvoid print_message(const char *msg);\nfloat compute_average(int *values, int count);\n\n// Function definitions\nstatic inline int max(int a, int b) {\n    return (a > b) ? a : b;\n}\n\n#endif\n",
  "test_name": "test_c_function_declarations",
  "total_chunks": 3
}
