tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_c_variable_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "int global_counter = 0;",
      "end_line": 2,
      "language": "c",
      "name": "global_counter",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "static int static_var = 42;",
      "end_line": 4,
      "language": "c",
      "name": "static_var",
      "original_indentation": 0,
      "start_line": 4
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "int main() {\n    int local_var = 10;\n    char arr[100];\n    float *ptr = malloc(sizeof(float));\n    return 0;\n}",
      "end_line": 11,
      "language": "c",
      "name": "main",
      "original_indentation": 0,
      "start_line": 6
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    int local_var = 10;",
      "end_line": 7,
      "language": "c",
      "name": "local_var",
      "original_indentation": 4,
      "start_line": 7
    }
  ],
  "source_code": "\nint global_counter = 0;\nchar *buffer = NULL;\nstatic int static_var = 42;\n\nint main() {\n    int local_var = 10;\n    char arr[100];\n    float *ptr = malloc(sizeof(float));\n    return 0;\n}\n",
  "test_name": "test_c_variable_extraction",
  "total_chunks": 4
}
