tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_clojure_defmacro_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\n(defmacro unless [pred a b]\n  `(if (not ~pred) ~a ~b))\n\n(defmacro my-macro [x]\n  x)\n",
      "end_line": 6,
      "language": "clojure",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "(defmacro unless [pred a b]\n  `(if (not ~pred) ~a ~b))",
      "end_line": 3,
      "language": "clojure",
      "name": "unless",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "(defmacro my-macro [x]\n  x)",
      "end_line": 6,
      "language": "clojure",
      "name": "my-macro",
      "original_indentation": 0,
      "start_line": 5
    }
  ],
  "source_code": "\n(defmacro unless [pred a b]\n  `(if (not ~pred) ~a ~b))\n\n(defmacro my-macro [x]\n  x)\n",
  "test_name": "test_clojure_defmacro_extraction",
  "total_chunks": 3
}
