tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_clojure_defn_dash_extraction.snap
---
source: tests/integration/languages/extractor.rs
assertion_line: 116
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\n(defn- private-helper []\n  42)\n\n(defn- calculate-internal [x]\n  (* x 2))\n",
      "end_line": 6,
      "language": "clojure",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "(defn- private-helper",
      "end_line": 2,
      "language": "clojure",
      "name": "name",
      "original_indentation": 7,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "(defn- private-helper []\n  42)",
      "end_line": 3,
      "language": "clojure",
      "name": "defn-",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "(defn- calculate-internal",
      "end_line": 5,
      "language": "clojure",
      "name": "name",
      "original_indentation": 7,
      "start_line": 5
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "(defn- calculate-internal [x]\n  (* x 2))",
      "end_line": 6,
      "language": "clojure",
      "name": "defn-",
      "original_indentation": 0,
      "start_line": 5
    }
  ],
  "source_code": "\n(defn- private-helper []\n  42)\n\n(defn- calculate-internal [x]\n  (* x 2))\n",
  "test_name": "test_clojure_defn_dash_extraction",
  "total_chunks": 5
}
